[package]
name = "agent"
version = "0.1.0"
authors = ["GoRules <hi@gorules.io>"]
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-macros = "0.5"
axum-server = { version = "0.8", features = ["tls-rustls"] }
anyhow = "1"
aws-config = "1.5"
aws-sdk-s3 = "1.41"
azure_core = { version = "0.21", default-features = false }
azure_storage = { version = "0.21", default-features = false, features = ["hmac_rust", "enable_reqwest_rustls"] }
azure_storage_blobs = { version = "0.21", default-features = false, features = ["hmac_rust", "enable_reqwest_rustls"] }
azure_identity = "0.21"
base64 = "0.22"
config = "0.15"
chrono = "0.4"
dashmap = "6.0"
dotenvy = "0.15"
futures = { version = "0.3" }
google-cloud-storage = { version = "0.24", default-features = false, features = ["auth", "rustls-tls"] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-full", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time", "json"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
itertools = "0.14"
utoipa = { version = "5", features = ["rc_schema"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-swagger-ui-vendored = "0.1"
walkdir = "2.5"
mimalloc = { version = "*" }
zen-engine = { version = "0.54", features = ["arbitrary_precision"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "8.2", default-features = false, features = [
    "aes-crypto",
    "bzip2",
    "deflate64",
    "deflate",
    "time",
    "zstd",
] }

opentelemetry = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-appender-tracing = { version = "0.31" }
opentelemetry-semantic-conventions = "0.31"
axum-tracing-opentelemetry = { version = "0.33", features = ["tracing_level_info"] }
tracing-opentelemetry = { version = "0.32", features = ["metrics"] }

[dev-dependencies]
testcontainers = "0.27"
urlencoding = "2.1.3"

[profile.release]
lto = true
codegen-units = 1